--- a/sistema.html
+++ b/sistema.html
@@ -40,6 +40,21 @@ else
                   background: #f9f9f9;
             }
 
+            nav {
+                  box-shadow: 1px 1px 15px 1px #3d485265;
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  padding: 10px;
+            }
+
+            h1 {
+                  background-color: rgba(0, 0, 0, 0.8);
+                  color: white;
+                  padding: 10px;
+                  border-radius: 15px;
+            }
+
             .sair {
                   font-size: 15px;
                   box-shadow: 1px 1px 15px 1px #3d485265;
@@ -49,16 +64,37 @@ else
                   color: #CCA43B;
                   text-decoration: none;
                   position: absolute;
-                  top: 10px;
+                  margin-top: 10px;
                   right: 20px;
+            }
+
+            textarea {
+                  border: 1px solid rgba(0, 0, 0, 0.253);
+                  width: 50vh;
+                  resize: none;
+            }
+
+            input {
+                  border: 1px solid rgba(0, 0, 0, 0.253);
+                  width: 30vh;
+                  resize: none;
+            }
+
+            button {
+                  background-color: rgba(0, 0, 0, 0.8);
+                  color: #CCA43B;
+                  border-radius: 5px;
+                  cursor: pointer;
             }
       </style>
 </head>
 <body>
-      <div class="d-flex">
-            <a href="sair.php" class="sair">SAIR</a>
-      </div>
-      <h1>SISTEMA ACESSADO</h1>
+      <nav>
+            <div class="d-flex">
+                  <a href="sair.php" class="sair">SAIR</a>
+            </div>
+            <h1>SISTEMA ACESSADO</h1>
+      </nav> <br>
       
       <main>
             <!-- Formulário para criar post -->
